Add --force and onboarding feature
removed maven mentions
